--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pulkitvarma.github.io/nineleaps/mindscribble-admin-FE",
+  "homepage": "https://pulkitvarma.github.io/deployment",
   "name": "mindscribble-admin",
   "version": "0.1.0",
   "private": true,
